Fixed sign-out overflow bug

--- a/client/src/pages/Dashboard/SideNav.css
+++ b/client/src/pages/Dashboard/SideNav.css
@@ -64,7 +64,7 @@
 }
 
 .sidenav-logout {
-    margin-top: 60vh;
+    /*margin-bottom: 2vh; */
     padding: 10px;
     color: #e65061;
 }
